# self-study_2022-summer

./: README.md  setup.cfg
notebooks/SDRi/: AuxLaplaceIVA.ipynb  GGDILRMA.ipynb  GaussILRMA.ipynb  TILRMA.ipynb
notebooks/convergence/: AuxLaplaceIVA.ipynb  GaussILRMA.ipynb
study2022summer/: data.py  reporter.py  utils.py
