[metadata]
name = study2022summer
version = attr: study2022summer.__init__.__version__
description = "Self study in 2022 Summer"
long_description = "Self study in 2022 Summer"
url = "https://github.com/tky823/self-study_2022-summer"
python_requires = ">=3.7, <4"

[options]
packages = find:
install_requires =
    numpy
    scipy
    seaborn
    plotly
    mir_eval
    ssspy @ git+https://github.com/tky823/ssspy.git@v0.0.1

[options.extras_require]
dev =
    flake8
    black
